--- a/css/styles.css
+++ b/css/styles.css
@@ -478,19 +478,12 @@ h1 {
 
 .box {
   position: relative;
-  width: 300px;
-  height: 300px;
-  margin-left: auto;
-  margin-right: auto;
-  background-color: #bdbdbd;
-  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
-    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 
   overflow: hidden;
 }
 
 .box:hover .overlay {
-  transform: translatex(0);
+  transform: translateY(0);
 }
 
 .overlay {
@@ -499,9 +492,10 @@ h1 {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #3f51b5;
+  padding: 49px 45px 49px 24px;
+  background-color: rgba(33, 150, 243, 0.9);
 
-  transform: translatex(-100%);
+  transform: translateY(100%);
   transition: transform 250ms ease;
 }
 
