--- a/css/styles.css
+++ b/css/styles.css
@@ -513,3 +513,24 @@ h1 {
   background-color: #fff;
   color: #2a2a2a;
 }
+.wraper {
+  position: relative;
+  padding: 0px;
+  width: 370px;
+  height: 70px;
+  display: inline-block;
+}
+.wraper p {
+  position: absolute;
+  color: var(--text-white);
+  padding: 10px;
+  margin: 0;
+  font-size: 14px;
+  bottom: 0;
+  background: rgba(47, 48, 58, 0.8);
+
+  font-weight: 700;
+  line-height: 16px;
+  text-align: center;
+  text-transform: uppercase;
+}
