--- a/css/styles.css
+++ b/css/styles.css
@@ -555,7 +555,7 @@ h1 {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   position: relative;
-  transition: 250ms ease;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .close-btn {
   position: absolute;
