--- a/css/styles.css
+++ b/css/styles.css
@@ -545,6 +545,8 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
+  transform: scale(1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal {
@@ -567,9 +569,11 @@ h1 {
   border: 1px solid rgba(0, 0, 0, 0.1);
   box-sizing: border-box;
   border-radius: 50%;
+  cursor: pointer;
 }
 .is-hidden {
   visibility: hidden;
   opacity: 0;
   pointer-events: none;
+  transform: scale(0.1);
 }
